[package]
name = "lz_diet"
version = "0.1.4"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]
description = "An AVL balanced Discrete Interval Encoding Tree"
repository = "https://github.com/lukazoid/lz_diet"
keywords = ["DIET", "Tree", "Interval", "Range", "AVL"]
categories = ["data-structures"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "Lukazoid/lz_diet" }

[dependencies]
matches = "0.1.6"
binary-tree = "0.2.0"
log = "0.3.8"
chrono = { version = "0.4.0", optional = true }
extprim = { version = "1.4.0", optional = true }
num-bigint = { version = "0.1.40", optional = true }
num-traits = { version = "0.1.40", optional = true }

[features]
default = []
bigint = ["num-bigint", "num-traits"]

[dev-dependencies]
env_logger = "0.4.3"