[package]
name = "lz_diet"
version = "0.1.5"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]
description = "An AVL balanced Discrete Interval Encoding Tree"
repository = "https://github.com/lukazoid/lz_diet"
keywords = ["DIET", "Tree", "Interval", "Range", "AVL"]
categories = ["data-structures"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "Lukazoid/lz_diet" }

[dependencies]
matches = "0.1.8"
binary-tree = "0.2.0"
log = "0.4.6"
chrono = { version = "0.4.6", optional = true }
extprim = { version = "1.7.0", optional = true }
num-bigint = { version = "0.2.2", optional = true }
num-traits = { version = "0.2.8", optional = true }

[features]
default = []
bigint = ["num-bigint", "num-traits"]

[dev-dependencies]
env_logger = "0.6.1"